# birthdays

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: contacts.vcf  demo.tape
src/birthdays/: __init__.py  __main__.py  birthdays.py  emojis.py
