[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birthdays-cli"
version = "0.1.0"
dependencies = [
    "python-dateutil>=2.8.2",
    "platformdirs>=4.0.0",
]
requires-python = ">=3.11"
authors = [
  {name = "Volodymyr Horshenin"}
]
description = "A command-line utility for displaying and managing birthdays from JSON- or vCard-based contacts."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = [
    "cli", "utility", "tool",
]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: End Users/Desktop",
  "Topic :: Utilities",
  "Environment :: Console",

  "Operating System :: OS Independent",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/l1asis/birthdays.git"
Issues = "https://github.com/l1asis/birthdays/issues"

[project.scripts]
birthdays = "birthdays.birthdays:main"
bday = "birthdays.birthdays:main"

[tool.hatch.build.targets.wheel]
packages = ["src/birthdays"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
